Sat Nov  2 22:17:45 1996  Fredrik Hubinette  <hubbe@tymin.blarg.com>

	* language.yacc: if(int a) implemente
	* configure.in: --without-threads implemented

Fri Nov  1 15:47:48 1996  Fredrik Hubinette  <hubbe@tymin.blarg.com>

	* new functions: uniq, implode_nicely
	* master.pike: changed backtrace order
	* f_upper_case/f_lower_case now uses EXTRACT_UCHAR
	* some documentation about pike internals added
	* htmlify_docs.pike fixed to handle internal docs
	* mpz->powm fixed
	* modules/math/math.c: sqrt optimized
	
Tue Oct 29 16:12:03 1996  Fredrik Hubinette  <hubbe@tymin.blarg.com>

	* builtin_functions.c upper_case/lower_case: should now fix 8 bit chars

Fri Oct 25 04:16:54 1996  Fredrik Hubinette  <hubbe@skuld.infovav.se>

	* read_file, stderr, stdout, stdin added

Tue Oct 15 06:01:26 1996  Fredrik Hubinette  <hubbe@skuld.infovav.se>

	* thread swaps, gc, object destruction and signal handling
	  is now handled by generic evaluator callbacks
	* /precompiled/FILE added
	* strmult, find_option, get_args added
	* while(1); now compiles correctly

Sat Oct 12 20:03:39 1996  Fredrik Hubinette  <hubbe@skuld.infovav.se>

	* string hash table now grows when needed
	* v0.2 realeased

Wed Oct  9 04:02:29 1996  Fredrik Hubinette  <hubbe@nuala.infovav.se>

	* /precompiled/string_buffer added
	* /precompiled/queue added
	* configure script improved with --with-xxx options
	* mmapped stacks should now work
	* catch() should now work in handle_error

Tue Oct  8 21:26:02 1996  Fredrik Hubinette  <hubbe@nuala.infovav.se>

	* gmpmod should now compile even if gmp.h is available, but not libgmp

Tue Oct  8 06:19:19 1996  Fredrik Hubinette  <hubbe@cuckoo.infovav.se>

	* New efun: load module
	* bug in copy_mapping fixed

Sat Oct  5 02:53:14 1996  Fredrik Hubinette  <hubbe@teleute.infovav.se>

	* /precompiled/fifo added (with #include <fifo.h>)
	* sprintf now handles zeros in format string correctly

Fri Oct  4 01:45:45 1996  Fredrik Hubinette  <hubbe@beldandy.infovav.se>
